# Cyril

./: .gitignore  README.md  pyproject.toml
.github/: test.yaml
cyril/: __main__.py  config.py
cyril/commands/: ask.py  bash.py  keyboard.py  register.py  terraform.py
cyril/load_env/: load.py
cyril/operators/: abc.py  gemini.py  gemini_API.py  open_ai.py
cyril/scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py
tests/test_commands/: test_c.py
tests/test_load_env/: test_l.py
